--- a/code/.gitignore
+++ b/code/.gitignore
@@ -1,4 +1,5 @@
-/Interesting Guessing Words.key
-# 忽略虚拟环境的除code文件夹外的所有文件和文件夹
-venv/  # 如果虚拟环境在项目根目录下
-!venv/code/  # 保留code文件夹
+# 忽略所有项目根目录下的文件和文件夹
+/*
+
+# 保留 code 文件夹
+!code/
